--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -213,6 +213,8 @@
   gap: 1rem;
   font-size: 1.2rem;
   color: var(--color-secondary);
+  align-items: flex-start;
+  text-align: left;
 }
 
 .represented-logo {
