--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -63,9 +63,8 @@
 .container {
   width: 90%;
   max-width: var(--max-width);
-  margin: 0 auto;
+  margin: 60px auto 0;
   padding: 1rem;
-  padding-top: calc(2rem + 40px);
 }
 
 @media (min-width: 768px) {
