--- a/src/styles/MasonryGallery.css
+++ b/src/styles/MasonryGallery.css
@@ -178,11 +178,14 @@
     column-span: all;
     width: 100%;
     max-width: 100%;
+    display: block;
   }
 
   .wide-card .card-content {
     aspect-ratio: 21/9;
     width: 100%;
+    display: block;
+    margin: 0;
   }
 
   .wide-card .card-content img {
@@ -190,6 +193,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    display: block;
   }
 
   .card-content {
