--- a/src/styles/MasonryGallery.css
+++ b/src/styles/MasonryGallery.css
@@ -190,6 +190,30 @@
     height: 800px;
   }
 
+  @media (max-width: 1200px) {
+    .wide-card .card-content {
+      height: 700px;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .wide-card .card-content {
+      height: 600px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .wide-card .card-content {
+      height: 500px;
+    }
+  }
+
+  @media (max-width: 576px) {
+    .wide-card .card-content {
+      height: 400px;
+    }
+  }
+
   .wide-card .card-content img {
     min-height: unset;
     height: 100%;
