--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -50,14 +50,17 @@
 .background-image {
   width: 100%;
   height: 100%;
-  object-fit: repeat;
+  object-fit: cover;
   opacity: 0.25;
-  transform: scale(1);
+  transform: scale(1.5);
   transform-origin: center;
   filter: brightness(0.8) contrast(1.2);
   pointer-events: none;
   user-select: none;
   -webkit-user-select: none;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .container {
