--- a/src/styles/FinanceCalculator.css
+++ b/src/styles/FinanceCalculator.css
@@ -58,7 +58,6 @@
   width: 100%;
   height: 48px;
   padding: 0.75rem;
-  padding-left: 1.5rem;
   border: 1px solid #ddd;
   border-radius: 6px;
   font-size: 1rem;
@@ -109,7 +108,7 @@
 
 .percent-input {
   padding-right: 2.5rem !important;
-  padding-left: 0.75rem !important;
+  text-align: right;
 }
 
 .calculator-input select {
